github username change

--- a/templates/home.html
+++ b/templates/home.html
@@ -533,7 +533,7 @@
                 <div class="icons">
                     <a href="mailto:mariogutierrezcto@gmail.com"><img src="../static/email.png" class="icon" alt="Mail"></a>
                     <a href="https://www.linkedin.com/in/mariogutierrezdelgado/" target="_blank"><img src="../static/linkedin.png" class="icon" alt="LinkedIn"></a>
-                    <a href="https://github.com/mario11gd"><img src="../static/github.png" class="icon" alt="GitHub"></a>
+                    <a href="https://github.com/maariogutierrez"><img src="../static/github.png" class="icon" alt="GitHub"></a>
                 </div>
             </div>
             <div class="location">
@@ -819,7 +819,7 @@
             <div class="icons">
                 <a href="mailto:mariogutierrezcto@gmail.com"><img src="../static/email.png" class="icon" alt="Mail"></a>
                 <a href="https://www.linkedin.com/in/mariogutierrezdelgado/" target="_blank"><img src="../static/linkedin.png" class="icon" alt="LinkedIn"></a>
-                <a href="https://github.com/mario11gd"><img src="../static/github.png" class="icon" alt="GitHub"></a>
+                <a href="https://github.com/maariogutierrez"><img src="../static/github.png" class="icon" alt="GitHub"></a>
             </div>
         </div>
     </div>
