Increase in min-height of job description and about me sections

--- a/templates/home.html
+++ b/templates/home.html
@@ -112,7 +112,7 @@
         .experience .jobs .job .job-description {
             font-size: 1.7vw;
             margin-top: 0.5vh;
-            min-height: 55px;
+            min-height: 10vh;
             text-align: justify;
         }
         .typewriter::after {
@@ -214,7 +214,7 @@
             transition: transform 0.3s ease;
         }
         .about-me {
-            min-height: 170px;
+            min-height: 27vh;
         }
         .about-me .header {
             display: flex;
@@ -783,7 +783,7 @@
                             Website
                         </div>
                         <div class="last-modified">
-                            Last modified: 04-07-2025
+                            Last modified: 26-09-2025
                         </div>
                     </a>
                 </div>
