Update projects and add React and React Native to technologies

--- a/templates/home.html
+++ b/templates/home.html
@@ -598,6 +598,14 @@
                         <span>Flask</span>
                     </div>
                     <div class="technology">
+                        <img src="../static/react.png" alt="Flask">
+                        <span>React</span>
+                    </div>
+                    <div class="technology">
+                        <img src="../static/react-native.png" alt="Flask">
+                        <span>React Native</span>
+                    </div>
+                    <div class="technology">
                         <img src="../static/scala.png" alt="Scala">
                         <span>Scala</span>
                     </div>
@@ -640,6 +648,14 @@
                     <div class="technology">
                         <img src="../static/flask.png" alt="Flask">
                         <span>Flask</span>
+                    </div>
+                    <div class="technology">
+                        <img src="../static/react.png" alt="Flask">
+                        <span>React</span>
+                    </div>
+                    <div class="technology">
+                        <img src="../static/react-native.png" alt="Flask">
+                        <span>React Native</span>
                     </div>
                     <div class="technology">
                         <img src="../static/scala.png" alt="Scala">
@@ -690,6 +706,14 @@
                         <span>Flask</span>
                     </div>
                     <div class="technology">
+                        <img src="../static/react.png" alt="Flask">
+                        <span>React</span>
+                    </div>
+                    <div class="technology">
+                        <img src="../static/react-native.png" alt="Flask">
+                        <span>React Native</span>
+                    </div>
+                    <div class="technology">
                         <img src="../static/scala.png" alt="Scala">
                         <span>Scala</span>
                     </div>
@@ -734,6 +758,14 @@
                         <span>Flask</span>
                     </div>
                     <div class="technology">
+                        <img src="../static/react.png" alt="Flask">
+                        <span>React</span>
+                    </div>
+                    <div class="technology">
+                        <img src="../static/react-native.png" alt="Flask">
+                        <span>React Native</span>
+                    </div>
+                    <div class="technology">
                         <img src="../static/scala.png" alt="Scala">
                         <span>Scala</span>
                     </div>
@@ -758,6 +790,26 @@
             </div>
             <div class="projects">
                 <div class="project">
+                    <a href="https://github.com/maariogutierrez/Website">
+                        <div class="project-title">
+                            website
+                        </div>
+                        <div class="last-modified">
+                            Last modified: 18-11-2025
+                        </div>
+                    </a>
+                </div>
+                <div class="project">
+                    <a href="https://github.com/maariogutierrez/dudasETSIT">
+                        <div class="project-title">
+                            data-orchestator
+                        </div>
+                        <div class="last-modified">
+                            Last modified: 09-10-2025
+                        </div>
+                    </a>
+                </div>
+                <div class="project">
                     <a href="https://github.com/maariogutierrez/face-recognition-stream">
                         <div class="project-title">
                         face-recognition-stream
@@ -765,26 +817,6 @@
                     <div class="last-modified">
                         Last modified: 22-06-2025
                     </div>
-                    </a>
-                </div>
-                <div class="project">
-                    <a href="https://github.com/maariogutierrez/dudasETSIT">
-                        <div class="project-title">
-                            dudasETSIT
-                        </div>
-                        <div class="last-modified">
-                            Last modified: 22-06-2025
-                        </div>
-                    </a>
-                </div>
-                <div class="project">
-                    <a href="https://github.com/maariogutierrez/Website">
-                        <div class="project-title">
-                            Website
-                        </div>
-                        <div class="last-modified">
-                            Last modified: 26-09-2025
-                        </div>
                     </a>
                 </div>
                 <div class="and-more">
