Technologies, portfolio, about me, get in touch and footer

--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,46 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+@font-face {
+  font-family: 'ByteBounce';
+  src: url("../public/fonts/ByteBounce.ttf");
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+@font-face {
+  font-family: 'UbuntuMono-R';
+  src: url("../public/fonts/UbuntuMono-R.ttf");
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+::-webkit-scrollbar {
+  display: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+#content {
+  font-family: 'ByteBounce';
+  line-height: 1.5;
+  font-weight: 400;
+  
+  color: rgba(255, 255, 255, 0.87);
+  background-color: #242424;
+  
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  width: 100vw;
 }
 
-.card {
-  padding: 2em;
+h2 {
+  font-size: 4vw;
+  margin: 0
 }
 
-.read-the-docs {
-  color: #888;
+.button {
+  background-color: #3E7CB1;
+  font-size: 1.5vw;
+
+  transition: background-color 180ms ease, transform 180ms ease;
+}
+
+.button:hover {
+  background-color: #2a72b1;
+  transform: scale(1.02);
 }
