--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -1,6 +1,5 @@
 #experience {
-    width: 60vw;
-    margin-top: 2vh;
+    width: 65vw;
 }
 
 #experience .jobs {
@@ -19,6 +18,23 @@
     gap: 0.5vw;
     align-items: baseline;
     text-align: justify;
+    width: 100%;
+    background: none;
+    border: none;
+    padding: 0;
+    color: inherit;
+    font: inherit;
+    cursor: pointer;
+}
+
+#experience .job-details:focus-visible {
+    outline: 2px solid #0ea5e9;
+    border-radius: 4px;
+    outline-offset: 6px;
+}
+
+#experience .job .icon {
+    align-self: center;    
 }
 
 #experience .job .job-title {
@@ -32,10 +48,19 @@
 
 #experience .job .job-description {
     font-size: 1.7vw;
-    margin-top: 0.5vh;
-    min-height: 10vh;
-    text-align: justify;
     margin-left: 1.5vw;
+    margin-top: 0;
+    text-align: justify;
+    max-height: 0;
+    overflow: hidden;
+    opacity: 0;
+    transition: max-height 250ms ease, opacity 180ms ease, margin-top 180ms ease;
+}
+
+#experience .job .job-description--open {
+    max-height: 60vh;
+    margin-top: 0.5vh;
+    opacity: 1;
 }
 
 #experience .job .job-description .highlight {
