--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -9,3 +9,16 @@
     font-weight: 600;
     color: #0ea5e9;
 }
+
+@media (max-width: 768px) {
+    #aboutMe {
+        width: 90vw;
+        font-size: 5vw;
+        margin-top: 0;
+    }
+
+    #aboutMeTitle {
+        font-size: 7vh;
+        margin-top: 1vh;
+    }
+}
