--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -71,3 +71,21 @@
   border-color: rgba(14, 165, 233, 0.5);
   color: #0ea5e9;
 }
+
+@media (max-width: 768px) {
+  #footerTitle {
+    display: none;
+  }
+
+  .footer__download-btn {
+    font-size: 6vw;
+  }
+
+  .footer__popover-title {
+    font-size: 6vw;
+  }
+
+  .footer__popover-btn {
+    font-size: 6vw;
+  }
+}
