Changes in mobile view

--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -81,7 +81,7 @@
 @media (max-width: 768px) {
 
     #carouselTitle{
-      font-size: 7vh;
+      font-size: 12vw;
     }
 
     .gallery-carousel__root {
