--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -18,7 +18,7 @@
     }
 
     #aboutMeTitle {
-        font-size: 7vh;
-        margin-top: 1vh;
+        font-size: 12vw;
+        margin-top: 2vw;
     }
 }
