--- a/src/components/Portfolio/Project.css
+++ b/src/components/Portfolio/Project.css
@@ -3,7 +3,7 @@
   flex-wrap: nowrap;
   flex-direction: row;
   align-items: stretch;
-  width: 37vw;
+  width: 40vw;
 
   transition: transform 180ms ease;
 }
@@ -64,8 +64,11 @@
     font-size: 3.5vw;
   }
 
-  .card .author,
   .card .date {
     font-size: 4vw;
+  }
+
+  .card .author {
+    display: none;
   }
 }
